armado de forms
