# src/app/api/models/pokemon-dto.ts
@@ -2,7 +2,9 @@
 /* eslint-disable */
 export interface PokemonDto {
   birthDate?: string;
+  debilidad?: null | string;
   id?: number;
   image?: null | string;
   name?: null | string;
+  tipo?: null | string;
 }
