# src/app/api/models/pokemons.ts
@@ -5,10 +5,12 @@ import { PokemonOwner } from '../models/pokemon-owner';
 import { Review } from '../models/review';
 export interface Pokemons {
   birthDate?: string;
+  debilidad?: null | string;
   id?: number;
   image?: null | string;
   name?: null | string;
   pokemonCategories?: null | Array<PokemonCategory>;
   pokemonOwners?: null | Array<PokemonOwner>;
   reviews?: null | Array<Review>;
+  tipo?: null | string;
 }
